# easy-go-takehome

./: .gitignore  Dockerfile  README.md  pyproject.toml  test.json  test_api.py
.github/workflows/: ci.yaml
infra/: alerts-sns-lambda.yaml  dynamodb.yaml  kda-flink.yaml  kinesis-stream.yaml  master.yaml  s3-buckets.yaml  sagemaker-endpoint.yaml
src/: inference.py
