[project]
name = "easy-go-fraud-inference"
version = "0.1.0"
description = "Minimal FastAPI-based fraud inference service."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi[standard]>=0.109,<1",
    "pydantic>=2.0,<3",
    "pandas==2.3.2",
    "uvicorn>=0.34.3",
    "pytest>=8.4.1"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
